export const snapshot = {};

snapshot[`molt 1`] = `
"
Usage: molt

Description:

  A tool for updating dependencies in Deno projects

Options:

  -h, --help     - Show this help.      
  -v, --version  - Print version info.  

Commands:

  check   <entrypoints...>  - Check for the latest version of dependencies
  update  <entrypoints...>  - Update dependencies to the latest version   

"
`;

snapshot[`molt 2`] = `""`;

snapshot[`molt --help 1`] = `
"
Usage: molt

Description:

  A tool for updating dependencies in Deno projects

Options:

  -h, --help     - Show this help.      
  -v, --version  - Print version info.  

Commands:

  check   <entrypoints...>  - Check for the latest version of dependencies
  update  <entrypoints...>  - Update dependencies to the latest version   

"
`;

snapshot[`molt --help 2`] = `""`;

snapshot[`molt --version 1`] = `
"123.456.789
"
`;

snapshot[`molt --version 2`] = `
"Fetching version info
"
`;

snapshot[`molt check 1`] = `
"
Usage: molt check <entrypoints...>

Description:

  Check for the latest version of dependencies

Options:

  -h, --help            - Show this help.          
  --import-map  <file>  - Specify import map file  

"
`;

snapshot[`molt check 2`] = `
"  error: Missing argument(s): entrypoints

"
`;

snapshot[`molt check --help 1`] = `
"
Usage: molt check <entrypoints...>

Description:

  Check for the latest version of dependencies

Options:

  -h, --help            - Show this help.          
  --import-map  <file>  - Specify import map file  

"
`;

snapshot[`molt check --help 2`] = `""`;

snapshot[`molt update 1`] = `
"
Usage: molt update <entrypoints...>

Description:

  Update dependencies to the latest version

Options:

  -h, --help               - Show this help.                                        
  --import-map   <file>    - Specify import map file                                
  --commit                 - Commit changes to git                                  
  --pre-commit   <tasks>   - Run tasks before each commit        (Depends: --commit)
  --post-commit  <tasks>   - Run tasks after each commit         (Depends: --commit)
  --prefix       <prefix>  - Prefix for commit messages          (Depends: --commit)
  --summary      <file>    - Write a summary of changes to file                     
  --report       <file>    - Write a report of changes to file                      

"
`;

snapshot[`molt update 2`] = `
"  error: Missing argument(s): entrypoints

"
`;

snapshot[`molt update --help 1`] = `
"
Usage: molt update <entrypoints...>

Description:

  Update dependencies to the latest version

Options:

  -h, --help               - Show this help.                                        
  --import-map   <file>    - Specify import map file                                
  --commit                 - Commit changes to git                                  
  --pre-commit   <tasks>   - Run tasks before each commit        (Depends: --commit)
  --post-commit  <tasks>   - Run tasks after each commit         (Depends: --commit)
  --prefix       <prefix>  - Prefix for commit messages          (Depends: --commit)
  --summary      <file>    - Write a summary of changes to file                     
  --report       <file>    - Write a report of changes to file                      

"
`;

snapshot[`molt update --help 2`] = `""`;

snapshot[`molt update test/fixtures/not_exist.ts 1`] = `""`;

snapshot[`molt update test/fixtures/not_exist.ts 2`] = `
'❌ path does not exist: "test/fixtures/not_exist.ts"
'
`;

snapshot[`molt update test/fixtures/import-map/deno.json 1`] = `""`;

snapshot[`molt update test/fixtures/import-map/deno.json 2`] = `
'❌ file must be javascript or typescript: "test/fixtures/import-map/deno.json"
'
`;

snapshot[`molt update test/fixtures/direct-import/mod.ts 1`] = `
"💡 Found updates:

📦 node-emoji 2.0.0 => 123.456.789
  test/fixtures/direct-import/mod.ts 2.0.0

📦 deno.land/std 0.200.0 => 123.456.789
  test/fixtures/direct-import/lib.ts 0.200.0
  test/fixtures/direct-import/mod.ts 0.200.0

📦 deno.land/x/deno_graph 0.50.0 => 123.456.789
  test/fixtures/direct-import/mod.ts 0.50.0

💾 test/fixtures/direct-import/mod.ts
💾 test/fixtures/direct-import/lib.ts
"
`;

snapshot[`molt update test/fixtures/direct-import/mod.ts 2`] = `
"Checking for updates
"
`;

snapshot[`molt update test/fixtures/import-map/mod.ts 1`] = `
"💡 Found updates:

📦 node-emoji 1.0.0 => 123.456.789
  test/fixtures/import-map/deno.json 1.0.0

📦 deno.land/x/deno_graph 0.50.0 => 123.456.789
  test/fixtures/import-map/deno.json 0.50.0

📦 deno.land/std 0.200.0 => 123.456.789
  test/fixtures/import-map/lib.ts 0.200.0
  test/fixtures/import-map/deno.json 0.200.0

💾 test/fixtures/import-map/deno.json
💾 test/fixtures/import-map/lib.ts
"
`;

snapshot[`molt update test/fixtures/import-map/mod.ts 2`] = `
"Checking for updates
"
`;

snapshot[`molt update test/fixtures/import-map/mod.ts --import-map test/fixtures/import-map/deno.json 1`] = `
"💡 Found updates:

📦 node-emoji 1.0.0 => 123.456.789
  test/fixtures/import-map/deno.json 1.0.0

📦 deno.land/x/deno_graph 0.50.0 => 123.456.789
  test/fixtures/import-map/deno.json 0.50.0

📦 deno.land/std 0.200.0 => 123.456.789
  test/fixtures/import-map/lib.ts 0.200.0
  test/fixtures/import-map/deno.json 0.200.0

💾 test/fixtures/import-map/deno.json
💾 test/fixtures/import-map/lib.ts
"
`;

snapshot[`molt update test/fixtures/import-map/mod.ts --import-map test/fixtures/import-map/deno.json 2`] = `
"Checking for updates
"
`;

snapshot[`molt update test/fixtures/import-map/mod.ts --import-map test/fixtures/import-map/not_exist.json 1`] = `""`;

snapshot[`molt update test/fixtures/import-map/mod.ts --import-map test/fixtures/import-map/not_exist.json 2`] = `
\`Checking for updates
NotFound: No such file or directory (os error 2): readfile '/home/shun/molt/test/fixtures/import-map/not_exist.json'
    at async readTextFile (ext:deno_fs/30_fs.js:747:18)
    at async Object.<anonymous> (file:///home/shun/molt/lib/testing.ts:61:15)
    at async Object.readFromJson (file:///home/shun/molt/lib/import_map.ts:40:16)
    at async Object.collect (file:///home/shun/molt/lib/update.ts:72:7)
    at async file:///home/shun/molt/cli.ts:132:9
    at async Promise.all (index 0)
    at async file:///home/shun/molt/cli.ts:130:21
    at async _collect (file:///home/shun/molt/cli.ts:129:10)
    at async Command.updateAction [as actionHandler] (file:///home/shun/molt/cli.ts:107:19)
    at async Command.execute (https://deno.land/x/cliffy@v1.0.0-rc.3/command/command.ts:1948:7) {
  name: "NotFound",
  code: "ENOENT"
}
\`
`;

snapshot[`molt update test/fixtures/direct-import/mod.ts --commit 1`] = `
"💡 Found updates:

📦 node-emoji 2.0.0 => 123.456.789
  test/fixtures/direct-import/mod.ts 2.0.0

📦 deno.land/x/deno_graph 0.50.0 => 123.456.789
  test/fixtures/direct-import/mod.ts 0.50.0

📦 deno.land/std 0.200.0 => 123.456.789
  test/fixtures/direct-import/lib.ts 0.200.0
  test/fixtures/direct-import/mod.ts 0.200.0

📝 bump node-emoji from 2.0.0 to 123.456.789
📝 bump deno.land/x/deno_graph from 0.50.0 to 123.456.789
📝 bump deno.land/std from 0.200.0 to 123.456.789
"
`;

snapshot[`molt update test/fixtures/direct-import/mod.ts --commit 2`] = `
"Checking for updates
"
`;

snapshot[`molt update test/fixtures/direct-import/mod.ts --commit --prefix :package: 1`] = `
"💡 Found updates:

📦 node-emoji 2.0.0 => 123.456.789
  test/fixtures/direct-import/mod.ts 2.0.0

📦 deno.land/x/deno_graph 0.50.0 => 123.456.789
  test/fixtures/direct-import/mod.ts 0.50.0

📦 deno.land/std 0.200.0 => 123.456.789
  test/fixtures/direct-import/lib.ts 0.200.0
  test/fixtures/direct-import/mod.ts 0.200.0

📝 :package: bump node-emoji from 2.0.0 to 123.456.789
📝 :package: bump deno.land/x/deno_graph from 0.50.0 to 123.456.789
📝 :package: bump deno.land/std from 0.200.0 to 123.456.789
"
`;

snapshot[`molt update test/fixtures/direct-import/mod.ts --commit --prefix :package: 2`] = `
"Checking for updates
"
`;

snapshot[`molt update test/fixtures/direct-import/mod.ts --commit --pre-commit=fmt --post-commit=lint 1`] = `
"💡 Found updates:

📦 node-emoji 2.0.0 => 123.456.789
  test/fixtures/direct-import/mod.ts 2.0.0

📦 deno.land/std 0.200.0 => 123.456.789
  test/fixtures/direct-import/lib.ts 0.200.0
  test/fixtures/direct-import/mod.ts 0.200.0

📦 deno.land/x/deno_graph 0.50.0 => 123.456.789
  test/fixtures/direct-import/mod.ts 0.50.0

💾 bump node-emoji from 2.0.0 to 123.456.789
🔨 Running task fmt...
📝 bump node-emoji from 2.0.0 to 123.456.789
🔨 Running task lint...

💾 bump deno.land/std from 0.200.0 to 123.456.789
🔨 Running task fmt...
📝 bump deno.land/std from 0.200.0 to 123.456.789
🔨 Running task lint...

💾 bump deno.land/x/deno_graph from 0.50.0 to 123.456.789
🔨 Running task fmt...
📝 bump deno.land/x/deno_graph from 0.50.0 to 123.456.789
🔨 Running task lint...
"
`;

snapshot[`molt update test/fixtures/direct-import/mod.ts --commit --pre-commit=fmt --post-commit=lint 2`] = `
"Checking for updates
"
`;

snapshot[`molt update test/fixtures/direct-import/mod.ts --commit --summary title.txt --report body.md 1`] = `
"💡 Found updates:

📦 node-emoji 2.0.0 => 123.456.789
  test/fixtures/direct-import/mod.ts 2.0.0

📦 deno.land/std 0.200.0 => 123.456.789
  test/fixtures/direct-import/lib.ts 0.200.0
  test/fixtures/direct-import/mod.ts 0.200.0

📦 deno.land/x/deno_graph 0.50.0 => 123.456.789
  test/fixtures/direct-import/mod.ts 0.50.0

📝 bump node-emoji from 2.0.0 to 123.456.789
📝 bump deno.land/std from 0.200.0 to 123.456.789
📝 bump deno.land/x/deno_graph from 0.50.0 to 123.456.789

📄 title.txt
📄 body.md
"
`;

snapshot[`molt update test/fixtures/direct-import/mod.ts --commit --summary title.txt --report body.md 2`] = `
"Checking for updates
"
`;
